<resources>
    <string name="app_name">ThePod</string>
    <string name="Login">Login</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="desserts">Desserts</string>
    <string name="leave_pod">Leave Pod</string>
    <string name="order_history">Order History</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="_251912345678">+251912345678</string>
    <string name="abebekebede_email_com">abebekebede@email.com</string>
    <string name="abebe_kebede">Abebe Kebede</string>
    <string name = "navigation_drawer_open">Open Navigation Drawer</string>
    <string name = "navigation_drawer_close">Close Navigation Drawer</string>

</resources>
