<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_orders"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/orders"
        android:visible="true"
        app:itemTextColor="@color/colorPrimary" />
    <item
        android:id="@+id/navigation_drinks"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/drinks"
        android:visible="true"
        app:itemTextColor="@color/colorPrimary" />

    <item
        android:id="@+id/navigation_food"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/food"
        android:visible="true" />
    <item
        android:id="@+id/navigation_desserts"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/desserts"
        android:visible="true" />
    <item
        android:id="@+id/navigation_leavepod"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/leave_pod"
        android:visible="true" />

</menu>
